--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "<a href=\"https://www.youtube.com/watch?v=Gd6j-zVnezI&feature=youtu.be\" target=\"_blank\">Intro Video</a>",
   "main": "index.js",
   "scripts": {
-    "pretest": "eslint -c .eslintrc.json --ignore-path .lintgitignore ./source --fix",
-    "test": "jest",
+    "eslint": "eslint -c .eslintrc.json --ignore-path .lintgitignore ./source --fix",
+    "test": "jest --coverage",
     "gendocs": "jsdoc -d ./docs ./source"
   },
   "repository": {
